# graphchat

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  task.txt
.github/workflows/: pypi.yml
graphchat/: config.example.json  config.py  db.py  llm_client.py  main.py  models.py  repository.py
graphchat/services/: graph_service.py  quiz_service.py  review_service.py
graphchat/web/: index.html  package-lock.json  package.json  vite.config.ts
graphchat/web/src/: App.vue  api.ts  mathjax.ts  styles.css  types.ts
graphchat/web/src/components/: GraphCanvas.vue
scripts/: check_ascii.py
