[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphchat"
version = "0.1.0-alpha.1"
description = "Dynamic knowledge graph learning assistant"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
]

[project.scripts]
graphchat-server = "graphchat.main:run"

[tool.setuptools]
packages = ["graphchat", "graphchat.services"]

[tool.setuptools.package-data]
graphchat = ["static/**/*", "config.example.json"]
